@@ -31,6 +31,7 @@ fun jvmEnsureAddOpens() {
             if (Platform.os.isMac) {
                 add("--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED")
                 add("--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
+                add("--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED")
             }
         }
 
